--- a/Arizona-Pesticide-Usage-Map.Rmd
+++ b/Arizona-Pesticide-Usage-Map.Rmd
@@ -105,7 +105,7 @@ Explore county
 Row
 ----------------------------------------------------------------------
 
-### Pestcide use
+### Pesticide use
 
 ```{r}
 
